# Codex_code_usage_display

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  manifest.json
src/: app.rs  main.rs  platform.rs
src/data/: api.rs  fetcher.rs  mod.rs  models.rs
src/ui/: cost_card.rs  countdown.rs  mod.rs  quota_bar.rs  root.rs  theme.rs  usage_panel.rs
src/wasm/: bridge.rs
zig-wasm/: build.zig
zig-wasm/src/: main.zig  metrics.zig  transform.zig
