[package]
name = "codex-usage-widget"
version = "0.1.0"
edition = "2024"
description = "Windows widget displaying OpenAI Codex usage stats (Zig WASM + gpui)"
authors = ["sayasaya11"]

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
wasmtime = "29"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[build-dependencies]
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
