[package]
name = "codex-usage-widget"
version = "0.2.5"
edition = "2024"
description = "Windows widget displaying Codex subscription usage stats (Zig WASM + gpui)"
authors = ["sayasaya11"]

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
wasmtime = "29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Registry", "Win32_UI_Shell"] }

[build-dependencies]
anyhow = "1"
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
